# my_snake

./: CMakeLists.txt  main.cpp
Functional/: Apple.cpp  Body.cpp  Logs.cpp  game_field.cpp  relative_designer.cpp  snake.cpp  wall.cpp
Headers/: Apple.h  Body.h  Logs.h  game_field.h  relative_designer.h  snake.h  wall.h
